--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>CINES-Portal</title>
+        <title>Net.Science</title>
 
         <!-- FUSE Splash Screen CSS -->
         <style type="text/css">
