--- a/public/index.html
+++ b/public/index.html
@@ -231,6 +231,7 @@
             </div>
             <!-- / FUSE Splash Screen -->
         </div>
+        <div id="portal"></div>
         <!--
           This HTML file is a template.
           If you open it directly in the browser, you will see an empty page.
