--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
         <link href="%PUBLIC_URL%/assets/fonts/material-outline-icons/styles.css" rel="stylesheet">
         <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet">
+        
         <noscript id="jss-insertion-point"></noscript>
         <!--
           Notice the use of %PUBLIC_URL% in the tags above.
@@ -198,6 +199,7 @@
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
+
         <div id="root" class="flex">
             <!-- FUSE Splash Screen -->
             <div id="fuse-splash-screen">
@@ -241,5 +243,8 @@
           To begin the development, run `npm start` or `yarn start`.
           To create a production bundle, use `npm run build` or `yarn build`.
         -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
