--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Fuse React - Material design admin template with pre-built apps and pages">
+        <meta name="description" content="Net.Science">
         <meta name="keywords"
-              content="React,Redux,Material UI Next,Material,Material Design,Google Material Design,HTML,CSS,Firebase,Authentication,Material Redux Theme,Material Redux Template">
-        <meta name="author" content="Withinpixels">
+              content="Network,Graph,Simulation">
+        <meta name="author" content="Biocomplexity Institute">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
         <base href="/">
